# deneme-123-32

./: CMakeLists.txt  main.cpp  scatterdatamodifier.cpp  scatterdatamodifier.h
